--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx-book-theme myst_parser
+          pip install sphinx sphinx-book-theme myst_parser linkify-it-py
       - name: Sphinx build
         run: |
           sphinx-build doc _build
